# chessEngine

./: CMakeLists.txt  LICENSE
chessEngine/: main.cpp
chessEngine.xcodeproj/: project.pbxproj
chessEngine.xcodeproj/project.xcworkspace/xcuserdata/bentan.xcuserdatad/: UserInterfaceState.xcuserstate
chessEngine/chessEngine/: main.cpp
chessEngine/chessEngine.xcodeproj/project.xcworkspace/xcuserdata/bentan.xcuserdatad/: UserInterfaceState.xcuserstate
src/: functionality.hpp  main.cpp
